--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
       </nav>
       <a class="cta" href="#"><button>Contact</button></a>
     </header>
+    <h1 class="title">All my projects in one site</h1>
+    <br>
+    <br>
+    <h3 class="question">What do I mean by project?</h3>
+    <header>By project I mean any achievement worth sharing, or that could help a future developer in his current projects, or that I feel the world should know about</header>
 </body>
 </html>
